--- a/static/css/main.css
+++ b/static/css/main.css
@@ -32,6 +32,7 @@ a {
   left: 2rem;
   font-family: "Playball", cursive;
   font-size: 2rem;
+  font-weight: normal;
   padding: 1rem;
   color: #dbdbdb;
   transition: all 0.5s ease-in-out;
@@ -56,9 +57,9 @@ a {
 }
 .nav .menu-btn {
   display: none;
-  position: relative;
+  position: absolute;
   top: 50%;
-  left: 90%;
+  right: 2rem;
   transform: translateY(-50%);
   z-index: 2;
   height: 20px;
