--- a/static/sass/_menu.sass
+++ b/static/sass/_menu.sass
@@ -17,6 +17,7 @@
     left: 2rem
     font-family: 'Playball', cursive
     font-size: 2rem
+    font-weight: normal
     padding: 1rem
     color: $primary-color
     @include transition-ease
@@ -41,9 +42,9 @@
 
   .menu-btn
     display: none
-    position: relative
+    position: absolute
     top: 50%
-    left: 90%
+    right: 2rem
     transform: translateY(-50%)
     z-index: 2
     height: 20px
