--- a/templates/base.html
+++ b/templates/base.html
@@ -18,10 +18,10 @@
     </div>
     <h1 class="title">Rishabh Prajapati</h1>
     <ul class="navbar">
-        <li><a class="navbar__item" href="#!">About Me</a></li>
-        <li><a class="navbar__item" href="#!">Portfolio</a></li>
-        <li><a class="navbar__item" href="#!">Timeline Blog</a></li>
-        <li><a class="navbar__item" href="#!">Contact Me</a></li>
+        <li><a class="navbar__item" href="/">About Me</a></li>
+        <li><a class="navbar__item" href="/portfolio">Portfolio</a></li>
+        <li><a class="navbar__item" href="/timeline">Timeline Blog</a></li>
+        <li><a class="navbar__item" href="/contact">Contact Me</a></li>
     </ul>
 </nav>
 {% block content %}
