--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,9 @@
     {% endblock %}
     {% load static %}
     <link rel="stylesheet" href='{% static "css/main.css" %}' type="text/css">
+    {% block extracss %}
+
+    {% endblock %}
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
 <body>
