--- a/timeline/static/timeline/sass/timeline.sass
+++ b/timeline/static/timeline/sass/timeline.sass
@@ -1,5 +1,4 @@
 body
-  background: url("/static/timeline/images/timeline_background.jpg")
+  background: linear-gradient(rgba(#000, 0.5), rgba(#000, 0.5)), url("/static/timeline/images/timeline_background.jpg")
   background-size: cover
   background-position-y: 25%
-  background-repeat: no-repeat
