--- a/static/sass/_variables.sass
+++ b/static/sass/_variables.sass
@@ -1,5 +1,5 @@
-$primary-background: #4c4c4c
+$primary-background: #040303
 $secondary-background: #2d93ad
-$primary-color: #dbdbdb
+$primary-color: #c2c2c2
 $secondary-color: #d78521
-$other-color: #de1a1a
+$other-color: #1f1f1f
