Cleaner timeline structure.

--- a/timeline/static/timeline/sass/timeline.sass
+++ b/timeline/static/timeline/sass/timeline.sass
@@ -1,4 +1,4 @@
 body
-  background: linear-gradient(rgba(#000, 0.5), rgba(#000, 0.5)), url("/static/timeline/images/timeline_background.jpg")
-  background-size: cover
-  background-position-y: 25%
+  background: url("/static/timeline/images/time_background.jpg")
+  background-repeat: no-repeat
+  background-size: auto
