--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Playball&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,400&display=swap");
 html {
   box-sizing: border-box;
+  font-family: sans-serif;
 }
 
 * {
