--- a/timeline/templates/timeline/timeline.html
+++ b/timeline/templates/timeline/timeline.html
@@ -20,6 +20,7 @@
             <img src="{{ media.file.url }}" height="100" alt="{{ media.file.name }}"/>
             {% endfor %}
         </div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente officiis perferendis sit perspiciatis. Veritatis sit necessitatibus alias, reiciendis nesciunt eveniet inventore nisi. Modi quaerat molestiae dolorem facere, explicabo quia sint.</p>
     </div>
     {% endfor %}
 </div>
