--- a/templates/base.html
+++ b/templates/base.html
@@ -15,9 +15,9 @@
 <body>
 <nav class="nav">
     <div class="menu-btn">
-        <span class="burger"></span>
-        <span class="burger"></span>
-        <span class="burger"></span>
+        <span class="burger upper"></span>
+        <span class="burger middle"></span>
+        <span class="burger lower"></span>
     </div>
     <h1 class="title">Rishabh Prajapati</h1>
     <ul class="navbar">
@@ -29,5 +29,6 @@
 </nav>
 {% block content %}
 {% endblock %}
+<script src='{% static "js/main.js" %}'></script>
 </body>
 </html>
