--- a/static/sass/_menu.sass
+++ b/static/sass/_menu.sass
@@ -47,8 +47,8 @@
     right: 2rem
     transform: translateY(-50%)
     z-index: 2
-    height: 20px
-    width: 28px
+    height: 1.2rem
+    width: 1.6rem
 
     .burger
       display: block
@@ -57,6 +57,15 @@
       margin: 5px
       border-radius: 2px
       background: $primary-color
+      @include transition-ease
 
-      &:hover
-        color: white
+    &.open
+      .middle
+        visibility: hidden
+
+      .upper
+        transform: rotate(-45deg) translate(-6px, 6px)
+
+      .lower
+        transform: rotate(45deg) translate(-6px, -6px)
+
