--- a/timeline/static/timeline/css/timeline.css
+++ b/timeline/static/timeline/css/timeline.css
@@ -37,17 +37,32 @@ body {
   margin: 1rem 2rem;
 }
 
-@media screen and (max-width: 900px) {
-  .nav .navbar {
-    visibility: hidden;
-  }
-  .nav .menu-btn {
-    display: block;
-  }
-}
 @media screen and (max-width: 1300px) {
   .nav .navbar {
     justify-content: flex-end;
+  }
+}
+@media screen and (max-width: 900px) {
+  .nav .navbar {
+    transform: translateY(-100%);
+    background: #040303;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 90vh;
+    width: 100vw;
+    opacity: 0.95;
+    z-index: 4;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: space-evenly;
+    transition: all 0.3s ease-in-out;
+  }
+  .nav .navbar__item {
+    margin: 2rem;
+  }
+  .nav .menu-btn {
+    display: block;
   }
 }
 @media screen and (max-width: 1300px) {
