--- a/static/sass/_menu.sass
+++ b/static/sass/_menu.sass
@@ -7,7 +7,7 @@
   left: 0
   z-index: 2
   width: 100vw
-  height: 5rem
+  height: $nav-height
   background: $primary-background
   @include transition-ease
 
