--- a/static/sass/_responsive.sass
+++ b/static/sass/_responsive.sass
@@ -11,7 +11,7 @@
       position: fixed
       top: 0
       left: 0
-      height: 90vh
+      bottom: $nav-height
       width: 100vw
       opacity: 0.95
       z-index: 4
@@ -21,7 +21,7 @@
       @include transition-ease
 
       &__item
-        margin: 2rem
+        padding: 0
 
 
     .menu-btn
