--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
         <span class="burger middle"></span>
         <span class="burger lower"></span>
     </div>
-    <h1 class="title">Rishabh Prajapati</h1>
+    <a class="title" href="/">Rishabh Prajapati</a>
     <ul class="navbar">
         <li><a class="navbar__item" href="/">About Me</a></li>
         <li><a class="navbar__item" href="/portfolio">Portfolio</a></li>
