--- a/static/sass/_menu.sass
+++ b/static/sass/_menu.sass
@@ -1,6 +1,9 @@
 @import mixins
 @import url('https://fonts.googleapis.com/css2?family=Playball&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,400&display=swap')
 
+body
+  padding-bottom: $nav-height
+
 .nav
   position: fixed
   bottom: 0
@@ -21,6 +24,9 @@
     padding: 1rem
     color: $primary-color
     @include transition-ease
+
+    &:hover
+      text-shadow: 0 0 1px white
 
   .navbar
     display: flex
