--- a/timeline/static/timeline/sass/timeline.sass
+++ b/timeline/static/timeline/sass/timeline.sass
@@ -2,7 +2,7 @@
 @import 'mixins'
 
 body
-  background: url("/static/timeline/images/time_background.jpg")
+  background: linear-gradient(rgba(#000, 0.3), rgba(#000, 0.3)), url("/static/timeline/images/time_background.jpg")
   background-repeat: no-repeat
   background-size: auto
   background-attachment: fixed
@@ -11,7 +11,7 @@ body
   width: 50%
   margin: 1rem auto
   margin-bottom: 1.5rem
-  border-radius: 15px
+  border-radius: 10px
   background: white
   box-shadow: 0 0 15px #888888
   padding-bottom: 1.5rem
