--- a/timeline/static/timeline/css/timeline.css
+++ b/timeline/static/timeline/css/timeline.css
@@ -6,35 +6,47 @@ body {
 }
 
 .moment {
-  width: 50%;
+  width: 60%;
   margin: 1rem auto;
   margin-bottom: 1.5rem;
   border-radius: 10px;
   background: white;
-  box-shadow: 0 0 15px #888888;
-  padding-bottom: 1.5rem;
+  box-shadow: 0 0 20px 0 black;
 }
-.moment__title {
+.moment__head {
+  display: flex;
+  justify-content: space-between;
   color: white;
   background: #1f1f1f;
   padding: 1rem;
   border: 1px black solid;
   border-top-left-radius: inherit;
   border-top-right-radius: inherit;
+  font-size: 1rem;
 }
-.moment__gallery {
-  background: #2d93ad;
+.moment__head__title {
+  font-weight: bold;
+}
+.moment__head__time {
+  font-style: italic;
+}
+.moment__body {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
 }
-.moment__gallery img {
-  border-radius: 3px;
-  margin: 1rem;
-  box-shadow: 0 0 10px 2px black;
-}
-.moment p {
+.moment__body p {
   margin: 1rem 2rem;
+}
+.moment__body__gallery {
+  background: #2d93ad;
+  display: grid;
+  padding: 1rem;
+  height: inherit;
+}
+.moment__body__gallery img {
+  width: 200px;
+  border-radius: 3px;
+  margin: 0.2rem;
+  box-shadow: 0 0 10px 0 black;
 }
 
 @media screen and (max-width: 1300px) {
@@ -49,7 +61,7 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    height: 90vh;
+    bottom: 5rem;
     width: 100vw;
     opacity: 0.95;
     z-index: 4;
@@ -59,7 +71,7 @@ body {
     transition: all 0.3s ease-in-out;
   }
   .nav .navbar__item {
-    margin: 2rem;
+    padding: 0;
   }
   .nav .menu-btn {
     display: block;
