--- a/timeline/static/timeline/css/timeline.css
+++ b/timeline/static/timeline/css/timeline.css
@@ -32,21 +32,44 @@ body {
 }
 .moment__body {
   display: flex;
+  border-radius: inherit;
 }
 .moment__body p {
-  margin: 1rem 2rem;
+  padding: 1rem 2rem;
 }
 .moment__body__gallery {
   background: #2d93ad;
   display: grid;
   padding: 1rem;
   height: inherit;
+  border-bottom-right-radius: inherit;
+  position: relative;
 }
-.moment__body__gallery img {
-  width: 200px;
-  border-radius: 3px;
-  margin: 0.2rem;
-  box-shadow: 0 0 10px 0 black;
+.moment__body__gallery .slide img {
+  box-shadow: 2px 2px 15px black;
+  max-width: 100%;
+  max-height: 100%;
+}
+.moment__body__gallery .prev, .moment__body__gallery .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 1rem;
+  transform: translateY(-50%);
+  color: white;
+  font-weight: bold;
+  font-size: 1rem;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+.moment__body__gallery .prev:hover, .moment__body__gallery .next:hover {
+  background: rgba(0, 0, 0, 0.5);
+}
+.moment__body__gallery .next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
 }
 
 @media screen and (max-width: 1300px) {
