--- a/timeline/static/timeline/sass/timeline.sass
+++ b/timeline/static/timeline/sass/timeline.sass
@@ -34,21 +34,46 @@ body
 
   &__body
     display: flex
+    border-radius: inherit
 
     p
-      margin: 1rem 2rem
+      padding: 1rem 2rem
 
     &__gallery
       background: $secondary-background
       display: grid
       padding: 1rem
       height: inherit
+      border-bottom-right-radius: inherit
+      position: relative
 
-      img
-        width: 200px
-        border-radius: 3px
-        margin: 0.2rem
-        box-shadow: 0 0 10px 0 black
 
+      .slide
+        img
+          box-shadow: 2px 2px 15px black
+          max-width: 100%
+          max-height: 100%
+
+      .prev, .next
+        cursor: pointer
+        position: absolute
+        top: 50%
+        width: auto
+        padding: 1rem
+        transform: translateY(-50%)
+        color: white
+        font-weight: bold
+        font-size: 1rem
+        transition: 0.6s ease
+        border-radius: 0 3px 3px 0
+        user-select: none
+
+        &:hover
+          background: rgba(#000, 0.5)
+
+      .next
+        right: 0
+        border-radius: 3px 0 0 3px
+    
 
 @import 'responsive'
