--- a/timeline/static/timeline/sass/timeline.sass
+++ b/timeline/static/timeline/sass/timeline.sass
@@ -37,9 +37,11 @@ body
     border-radius: inherit
 
     p
+      width: 40%
       padding: 1rem 2rem
 
     &__gallery
+      width: 60%
       background: $secondary-background
       display: grid
       padding: 1rem
@@ -74,6 +76,6 @@ body
       .next
         right: 0
         border-radius: 3px 0 0 3px
-    
+
 
 @import 'responsive'
