--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -11,15 +11,18 @@
 {% endblock %}
 
 {% block content %}
+    <div class="banner">Projects</div>
+    <div class="container" id="projects">
+    </div>
     <div class="banner">Experience</div>
     <div class="container" id="experience">
-        <div class="job">
+        <div class="container__item">
             <div class="flex">
-                <p class="job-title">Programmer Analyst - AI Department</p>
+                <p class="title">Programmer Analyst - AI Department</p>
                 <p class="duration">December 2020 - Present</p>
             </div>
-            <p class="job__company">Dosepack LLP, Meditab Softwares Inc., India</p>
-            <p class="job__description">Lorem ipsum
+            <p class="container__item__subtitle">Dosepack LLP, Meditab Softwares Inc., India</p>
+            <p class="container__item__description">Lorem ipsum
                 Lorem ipsumLorem ipsumLorem ipsumLorem ipsum
                 Lorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsum
                 Lorem ipsum
@@ -29,13 +32,13 @@
 
             </p>
         </div>
-        <div class="job">
+        <div class="container__item">
             <div class="flex">
-                <p class="job-title">Full Stack Developer Summer Intern</p>
+                <p class="title">Full Stack Developer Summer Intern</p>
                 <p class="duration">May 2018 - July 2018</p>
             </div>
-            <p class="job__company">Limelight Innovations, Ahmedabad</p>
-            <p class="job__description">Lorem ipsum
+            <p class="container__item__subtitle">Limelight Innovations, Ahmedabad</p>
+            <p class="container__item__description">Lorem ipsum
                 Lorem ipsumLorem ipsumLorem ipsumLorem ipsum
                 Lorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsum
                 Lorem ipsum
@@ -45,5 +48,23 @@
 
             </p>
         </div>
+    </div>
+    <div class="banner">Education</div>
+    <div class="container" id="education">
+        <div class="container__item">
+            <div class="flex">1
+                <p class="title">Faculty of Technology, Dharmsinh Desai University, Nadiad</p>
+                <p class="duration">July 2016 - May 2020</p>
+            </div>
+            <p class="container__item__subtitle">Bachelor of Technology</p>
+            <p>Course: Information Technology</p>
+        </div>
+        <div class="container__item">
+            <div class="flex">
+                <p class="title">Smt. M. M. Mehta English Medium School</p>
+            </div>
+            <p>Palanpur, India</p>
+        </div>
+
     </div>
 {% endblock %}
