--- a/portfolio/static/portfolio/sass/portfolio.sass
+++ b/portfolio/static/portfolio/sass/portfolio.sass
@@ -17,34 +17,33 @@
   text-align: center
   opacity: 90%
 
-
 .container
   margin: 0 auto
   width: 60%
 
+  &__item
+    margin: inherit
+    padding: 2rem 0 1rem 0
 
-.job
-  margin: inherit
-  padding: 1rem 0
+    *
+      padding-bottom: 1rem
 
-  *
-    padding-top: 1rem
+    .flex
+      font-size: 1.5rem
+      align-items: center
 
-  .flex
-    font-size: 1.5rem
+      .title
+        color: $secondary-background
 
-    .job-title
-      color: $secondary-background
+      .duration
+        color: gray
+        font-size: 0.8em
+        font-style: italic
 
-    .duration
-      color: gray
-      font-size: 0.8em
-      font-style: italic
+    &__subtitle
+      font-size: 1.1rem
 
-  &__company
-    font-size: 1.1rem
-
-  &__description
-    text-align: justify
+    &__description
+      text-align: justify
 
 @import 'responsive'
