Add projects' grid to portfolio

--- a/portfolio/static/portfolio/css/portfolio.css
+++ b/portfolio/static/portfolio/css/portfolio.css
@@ -18,7 +18,7 @@
 
 .container {
   margin: 0 auto;
-  width: 60%;
+  width: 65%;
 }
 .container__item {
   margin: inherit;
@@ -44,6 +44,44 @@
 }
 .container__item__description {
   text-align: justify;
+}
+
+#projects {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  grid-auto-rows: 22rem;
+  grid-gap: 2rem;
+  padding: 1.5rem 0;
+}
+#projects .project {
+  border-radius: 5px;
+  box-shadow: 0 0 10px gray;
+  position: relative;
+  overflow: hidden;
+  align-items: center;
+  transition: all 0.3s ease-in-out;
+}
+#projects .project img {
+  max-width: 100%;
+}
+#projects .project:hover {
+  box-shadow: 0 0 150px gray;
+}
+#projects .project:hover .title {
+  opacity: 95%;
+  top: 0;
+}
+#projects .project .title {
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  background: rgba(0, 0, 0, 0.6);
+  color: white;
+  font-size: 2rem;
+  text-align: center;
+  transition: all 0.3s ease-in-out;
 }
 
 @media screen and (max-width: 1300px) {
