--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -13,6 +13,14 @@
 {% block content %}
     <div class="banner">Projects</div>
     <div class="container" id="projects">
+        <div class="project">
+            <img src="{% static 'portfolio/images/music.png' %}" alt="Project Image">
+            <p class="title">Music Recommendation System</p>
+        </div>
+        <div class="project"></div>
+        <div class="project"></div>
+        <div class="project"></div>
+        <div class="project"></div>
     </div>
     <div class="banner">Experience</div>
     <div class="container" id="experience">
@@ -52,7 +60,7 @@
     <div class="banner">Education</div>
     <div class="container" id="education">
         <div class="container__item">
-            <div class="flex">1
+            <div class="flex">
                 <p class="title">Faculty of Technology, Dharmsinh Desai University, Nadiad</p>
                 <p class="duration">July 2016 - May 2020</p>
             </div>
