--- a/portfolio/static/portfolio/sass/portfolio.sass
+++ b/portfolio/static/portfolio/sass/portfolio.sass
@@ -19,7 +19,7 @@
 
 .container
   margin: 0 auto
-  width: 60%
+  width: 65%
 
   &__item
     margin: inherit
@@ -45,5 +45,50 @@
 
     &__description
       text-align: justify
+
+#projects
+  display: grid
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr))
+  grid-auto-rows: 22rem
+  grid-gap: 2rem
+  padding: 1.5rem 0
+
+  .project
+    border-radius: 5px
+    box-shadow: 0 0 10px gray
+    position: relative
+    overflow: hidden
+    align-items: center
+    @include transition-ease
+
+    img
+      max-width: 100%
+
+    &:hover
+      box-shadow: 0 0 150px gray
+
+      .title
+        opacity: 95%
+        top: 0
+
+    .title
+      position: absolute
+      top: 100%
+      width: 100%
+      height: 100%
+      opacity: 0
+
+      background: rgba(black, 0.6)
+      color: white
+      font-size: 2rem
+      text-align: center
+
+      @include transition-ease
+
+      //&:hover
+      //  opacity: 95%
+      //  top: 0
+
+
 
 @import 'responsive'
