--- a/portfolio/static/portfolio/css/portfolio.css
+++ b/portfolio/static/portfolio/css/portfolio.css
@@ -58,7 +58,6 @@
   box-shadow: 0 0 10px gray;
   position: relative;
   overflow: hidden;
-  align-items: center;
   transition: all 0.3s ease-in-out;
 }
 #projects .project img {
@@ -68,20 +67,44 @@
   box-shadow: 0 0 150px gray;
 }
 #projects .project:hover .title {
-  opacity: 95%;
-  top: 0;
+  opacity: 1;
+  transform: translateY(0);
+}
+#projects .project:hover .project__btns {
+  opacity: 1;
+  transform: translateY(-50%);
 }
 #projects .project .title {
   position: absolute;
-  top: 100%;
+  top: 0;
+  transform: translateY(-100%);
   width: 100%;
-  height: 100%;
   opacity: 0;
+  z-index: 2;
   background: rgba(0, 0, 0, 0.6);
-  color: white;
-  font-size: 2rem;
+  color: #c2c2c2;
+  font-size: 1.5rem;
   text-align: center;
+  padding: 1rem;
   transition: all 0.3s ease-in-out;
+}
+#projects .project__btns {
+  display: flex;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  transform: translateY(100%);
+  width: 100%;
+  opacity: 0;
+  z-index: 2;
+  background: rgba(0, 0, 0, 0.8);
+  transition: all 0.3s ease-in-out;
+}
+#projects .project__btns a {
+  width: 100%;
+  color: #c2c2c2;
+  text-align: center;
+  padding: 1rem;
 }
 
 @media screen and (max-width: 1300px) {
