--- a/portfolio/static/portfolio/sass/portfolio.sass
+++ b/portfolio/static/portfolio/sass/portfolio.sass
@@ -58,7 +58,6 @@
     box-shadow: 0 0 10px gray
     position: relative
     overflow: hidden
-    align-items: center
     @include transition-ease
 
     img
@@ -68,27 +67,45 @@
       box-shadow: 0 0 150px gray
 
       .title
-        opacity: 95%
-        top: 0
+        opacity: 1
+        transform: translateY(0)
+
+      .project__btns
+        opacity: 1
+        transform: translateY(-50%)
 
     .title
       position: absolute
-      top: 100%
+      top: 0
+      transform: translateY(-100%)
       width: 100%
-      height: 100%
       opacity: 0
+      z-index: 2
 
       background: rgba(black, 0.6)
-      color: white
-      font-size: 2rem
+      color: $primary-color
+      font-size: 1.5rem
       text-align: center
-
+      padding: 1rem
       @include transition-ease
 
-      //&:hover
-      //  opacity: 95%
-      //  top: 0
+    &__btns
+      display: flex
+      position: absolute
+      bottom: 0
+      left: 0
+      transform: translateY(100%)
+      width: 100%
+      opacity: 0
+      z-index: 2
 
+      background: rgba(black, 0.8)
+      @include transition-ease
 
+      a
+        width: 100%
+        color: $primary-color
+        text-align: center
+        padding: 1rem
 
 @import 'responsive'
