Add fontawesome icons js

--- a/portfolio/static/portfolio/sass/portfolio.sass
+++ b/portfolio/static/portfolio/sass/portfolio.sass
@@ -104,8 +104,11 @@
 
       a
         width: 100%
-        color: $primary-color
+        color: white
         text-align: center
         padding: 1rem
+
+        i
+          padding-right: 5px
 
 @import 'responsive'
