--- a/portfolio/static/portfolio/css/portfolio.css
+++ b/portfolio/static/portfolio/css/portfolio.css
@@ -102,9 +102,12 @@
 }
 #projects .project__btns a {
   width: 100%;
-  color: #c2c2c2;
+  color: white;
   text-align: center;
   padding: 1rem;
+}
+#projects .project__btns a i {
+  padding-right: 5px;
 }
 
 @media screen and (max-width: 1300px) {
