--- a/portfolio/static/portfolio/sass/portfolio.sass
+++ b/portfolio/static/portfolio/sass/portfolio.sass
@@ -54,61 +54,35 @@
   padding: 1.5rem 0
 
   .project
+    cursor: pointer
+    border: 4px solid white
     border-radius: 5px
     box-shadow: 0 0 10px gray
     position: relative
-    overflow: hidden
     @include transition-ease
 
     img
       max-width: 100%
 
     &:hover
-      box-shadow: 0 0 150px gray
+      box-shadow: 0 0 100px gray
 
       .title
         opacity: 1
-        transform: translateY(0)
-
-      .project__btns
-        opacity: 1
-        transform: translateY(-50%)
 
     .title
       position: absolute
       top: 0
-      transform: translateY(-100%)
       width: 100%
       opacity: 0
       z-index: 2
 
-      background: rgba(black, 0.6)
-      color: $primary-color
+      background: $primary-background
+      color: $secondary-background
       font-size: 1.5rem
       text-align: center
       padding: 1rem
       @include transition-ease
 
-    &__btns
-      display: flex
-      position: absolute
-      bottom: 0
-      left: 0
-      transform: translateY(100%)
-      width: 100%
-      opacity: 0
-      z-index: 2
-
-      background: rgba(black, 0.8)
-      @include transition-ease
-
-      a
-        width: 100%
-        color: white
-        text-align: center
-        padding: 1rem
-
-        i
-          padding-right: 5px
 
 @import 'responsive'
