--- a/portfolio/static/portfolio/sass/portfolio.sass
+++ b/portfolio/static/portfolio/sass/portfolio.sass
@@ -7,6 +7,9 @@
   justify-content: space-between
 
 .banner
+  z-index: 1
+  position: sticky
+  top: 0
   background: $other-color
   color: white
   font-family: 'Quicksand', sans-serif
